# nomo

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLASSMAP.md  CONTEXT.md  LICENSE  PROJECT_FILE_GUIDE.md  README.en.md  README.md  Todo&&Bug.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  sample.md  skills-lock.json  todo.md  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts  vite.quicklook.config.ts  实例.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/release-notes/: v0.2.2.md  v0.2.3.md  v0.3.0.md
.github/workflows/: release.yml
.scratch/: README.md  vscode-ui-redesign.md
.scratch/app-shell-decomposition/: PRD.md
.scratch/code-block-nodeview/: IMPLEMENTATION-PLAN.md  PRD.md
.scratch/diagram-nodeview/: PRD.md
.scratch/inline-code-nodeview/: PRD.md
.scratch/markdown-semantic-rendering/: PRD.md
.scratch/math-block/: PRD.md
.scratch/outline-interaction-fixes/: PRD.md
.scratch/paragraph-format-menu/: PRD.md
.scratch/phase-1-editable-loop/: PRD.md
.scratch/phase-2-writing-experience/: PRD.md
.scratch/phase-3-technical-docs/: PRD.md
.scratch/phase-4-desktop-stability/: PRD.md
docs/: PRD_轻量 Markdown 编辑器工程.md  Svelte_ProseMirror_Markdown_编辑器技术架构文档.md  Typora_Typedown_功能总结.md  math-inline-design-decisions.md  math_inline 行内公式——设计决策记录.md  prd-editable-html-blocks.md  prd-math-inline.md  txt-json-segmented-editor-technical-plan.md  基于 ProseMirror 的 Svelte Markdown 编辑器技术架构文档.md  编辑器可编辑闭环与路线规划.md
docs/agents/: domain.md  (+1 more)
html/: index.html  style.css  txt-search-replace-a.html  txt-search-replace-b.html
project.inlang/: settings.json
scripts/: build-macos-quicklook.sh  build-tauri-windows.ps1  embed-quicklook-extension.sh  regenerate-macos-icons.sh  run-tauri.mjs
sdd/: project.md
src/: main.ts  testSetup.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/nomo/: README.md
src-tauri/installer/: SimpChinese.nsh  windows-open-with.nsh
src-tauri/macos/NomoQuickLookPreview/: Info.plist  NomoQuickLookPreview.entitlements  PreviewViewController.swift  main.swift
src-tauri/src/: app_logger.rs  database.rs  export.rs  export_windows.rs  external_link.rs  file_system.rs  i18n.rs  lib.rs  main.rs  models.rs  software_update.rs  window.rs
src-tauri/src/config/: commands.rs  mod.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/file_system/: image_assets.rs
src-tauri/src/text_document/: chunk_reader.rs  commands.rs  edit_journal.rs  encoding.rs  line_index.rs  mod.rs  piece_tree.rs  session.rs  task_runner.rs
src-tauri/src/window/: commands.rs  external_open.rs  file_association.rs  menu.rs  mod.rs  state.rs  tray.rs
src-tauri/src/window/os/: macos.rs  mod.rs  windows.rs
(+293 files in other folders)
