[package]
name = "nomo"
version = "0.1.0"
description = "A lightweight Markdown-first editor"
authors = ["清羽"]
edition = "2021"

[lib]
name = "nomo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sys-locale = "0.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
  "NSApplication",
  "NSImage",
  "std",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
  "NSData",
  "std",
] }
